<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDK Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="getToken">点击获取token</string>
    <string name="reToken">点击刷新token</string>
	<string name="doGet">点击测试GET请求</string>
	<string name="doPost">点击测试POST请求</string>
	<string name="delToken">删除TOKEN</string>
	<string name="doClean">清空结果</string>
</resources>
