<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0"
    >
    <TableRow >
     <Button 
        android:id="@+id/getAccessToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getToken"
        android:textSize="12sp"
        />
     <Button 
        android:id="@+id/reToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reToken"
        android:textSize="12sp"
        />
     <Button 
        android:id="@+id/delToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delToken"
        android:textSize="12sp"
        />
	</TableRow>
	<TextView 
        android:id="@+id/showToken"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        />
    <CheckBox
        android:id="@+id/checkAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="是否access_token" />
    <TextView
          android:layout_width="82dp"
          android:layout_height="wrap_content"
          android:text="应用APPID:" />
    
        <EditText
            android:id="@+id/appid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23a13191-7b67-4f81-b9fc-6937e6289a9f"
            />
        <TextView
          android:layout_width="82dp"
          android:layout_height="wrap_content"
          android:text="应用密码:" />
    
        <EditText
            android:id="@+id/sercert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="C0F64E1B19A7E336EE072C3656638539" />
    
      <TextView
          android:id="@+id/textView1"
          android:layout_width="82dp"
          android:layout_height="wrap_content"
          android:text="请求地址:" />
    
        <EditText
            android:id="@+id/testUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="http://10.1.249.32:19211/getMyName" />
        
         <TextView
          android:layout_width="82dp"
          android:layout_height="wrap_content"
          android:text="必传请求参数(参数名=参数值;参数名=参数值;...):" />
    
        <EditText
            android:id="@+id/mustUrlParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        
        <TextView
          android:layout_width="82dp"
          android:layout_height="wrap_content"
          android:text="可选请求参数(参数名=参数值;参数名=参数值;...):" />
    
        <EditText
            android:id="@+id/urlParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Abcd=test2;abc=test1;" />
   <TableRow>
    <Button 
        android:id="@+id/doGet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/doGet"
        android:textSize="12sp"
        />
    <Button 
        android:id="@+id/doPost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="@string/doPost"
		android:textSize="12sp"
        />
    <Button 
        android:id="@+id/doClean"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:text="@string/doClean"
		android:textSize="12sp"
        />
    </TableRow> 
	<TextView 
        android:id="@+id/showResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        /> 
</TableLayout> 
